// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/system_user_detail/team_list/AbstractList should match snapshot if loading 1`] = `
<div>
  <div
    class="AbstractList"
  >
    <div
      class="AbstractList__body"
    >
      <div
        class="AbstractList__loading"
      >
        <i
          class="fa fa-spinner fa-pulse fa-2x"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/system_user_detail/team_list/AbstractList should match snapshot no data 1`] = `
<div>
  <div
    class="AbstractList"
  >
    <div
      class="AbstractList__body"
    >
      <div
        class="AbstractList__empty"
      >
        No teams found
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/system_user_detail/team_list/AbstractList should match snapshot when on second page of pagination 1`] = `
<div>
  <div
    class="AbstractList"
  >
    <div
      class="AbstractList__header"
    >
      <div
        class="AbstractList__header-label"
        style="flex-grow: 1; min-width: 284px; margin-left: 16px;"
      >
        Name
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Type
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Role
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      />
    </div>
    <div
      class="AbstractList__body"
    >
      <div
        data-testid="team-row-id11"
      >
        Team 11
      </div>
      <div
        data-testid="team-row-id12"
      >
        Team 12
      </div>
      <div
        data-testid="team-row-id13"
      >
        Team 13
      </div>
      <div
        data-testid="team-row-id14"
      >
        Team 14
      </div>
      <div
        data-testid="team-row-id15"
      >
        Team 15
      </div>
      <div
        data-testid="team-row-id16"
      >
        Team 16
      </div>
      <div
        data-testid="team-row-id17"
      >
        Team 17
      </div>
      <div
        data-testid="team-row-id18"
      >
        Team 18
      </div>
      <div
        data-testid="team-row-id19"
      >
        Team 19
      </div>
      <div
        data-testid="team-row-id20"
      >
        Team 20
      </div>
    </div>
    <div
      class="AbstractList__footer"
    >
      <div
        class="counter"
      >
        11 - 20 of 30
      </div>
      <button
        aria-label="Go to previous page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 prev"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
      <button
        aria-describedby="_r_a_"
        aria-label="Go to next page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`admin_console/system_user_detail/team_list/AbstractList should match snapshot with enough teams data to require paging 1`] = `
<div>
  <div
    class="AbstractList"
  >
    <div
      class="AbstractList__header"
    >
      <div
        class="AbstractList__header-label"
        style="flex-grow: 1; min-width: 284px; margin-left: 16px;"
      >
        Name
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Type
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Role
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      />
    </div>
    <div
      class="AbstractList__body"
    >
      <div
        data-testid="team-row-id1"
      >
        Team 1
      </div>
      <div
        data-testid="team-row-id2"
      >
        Team 2
      </div>
      <div
        data-testid="team-row-id3"
      >
        Team 3
      </div>
      <div
        data-testid="team-row-id4"
      >
        Team 4
      </div>
      <div
        data-testid="team-row-id5"
      >
        Team 5
      </div>
      <div
        data-testid="team-row-id6"
      >
        Team 6
      </div>
      <div
        data-testid="team-row-id7"
      >
        Team 7
      </div>
      <div
        data-testid="team-row-id8"
      >
        Team 8
      </div>
      <div
        data-testid="team-row-id9"
      >
        Team 9
      </div>
      <div
        data-testid="team-row-id10"
      >
        Team 10
      </div>
    </div>
    <div
      class="AbstractList__footer"
    >
      <div
        class="counter"
      >
        1 - 10 of 30
      </div>
      <button
        aria-label="Go to previous page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 prev"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
      <button
        aria-label="Go to next page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`admin_console/system_user_detail/team_list/AbstractList should match snapshot with teams data populated 1`] = `
<div>
  <div
    class="AbstractList"
  >
    <div
      class="AbstractList__header"
    >
      <div
        class="AbstractList__header-label"
        style="flex-grow: 1; min-width: 284px; margin-left: 16px;"
      >
        Name
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Type
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      >
        Role
      </div>
      <div
        class="AbstractList__header-label"
        style="width: 150px;"
      />
    </div>
    <div
      class="AbstractList__body"
    >
      <div
        data-testid="team-row-id1"
      >
        Team 1
      </div>
      <div
        data-testid="team-row-id2"
      >
        Team 2
      </div>
    </div>
    <div
      class="AbstractList__footer"
    >
      <div
        class="counter"
      >
        1 - 2 of 2
      </div>
      <button
        aria-label="Go to previous page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 prev"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
      <button
        aria-label="Go to next page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 next"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
